--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
         <div class="container">
           <a class="navbar-brand" href="https://youtu.be/r0xTqwKMOyk?si=w_2iC0RvE0paSvQG">
-            <img src="/props/LogoBar2.png" class="logo" alt="logo" />
+            <img src="./props/LogoBar2.png" class="logo" alt="logo" />
             welcome, My Loners☺
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
