--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="/styles/stylelogin.css">
+  <link rel="stylesheet" href="./styles/stylelogin.css">
   <script type="text/javascript" src="validation.js" defer></script>
 </head>
 <body>
