--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -10,7 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" 
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" 
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/styleaboutme.css">
+    <link rel="stylesheet" href="./styles/styleaboutme.css">
   
 
     <meta charset="utf-8">
