--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -26,7 +26,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
       <div class="container">
         <a class="navbar-brand" href="https://youtu.be/r0xTqwKMOyk?si=w_2iC0RvE0paSvQG">
-          <img src="/props/LogoBar2.png" class="logo" alt="logo" />
+          <img src="./props/LogoBar2.png" class="logo" alt="logo" />
           welcome, My Loners☺
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/pages/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./pages/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/aboutme.html">About Me</a>
+              <a class="nav-link" href="./pages/aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/ProjectsTab.html">Projects</a>
+              <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/joinme.html">join me</a>
+              <a class="nav-link" href="./pages/joinme.html">join me</a>
             </li>
           </ul>
         </div>
