--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col">
-                <img src="/props/Icon2.2.png" alt="About us" class="img-fluid" />
+                <img src="./props/Icon2.2.png" alt="About us" class="img-fluid" />
             </div>
             <div class="col">
                 <h1>About the creature</h1>
@@ -73,7 +73,7 @@
     </div>
 </section>
             <div class="areapic">
-    <img src="/props/creature1.jpg" class="creature" alt="creature" />
+    <img src="./props/creature1.jpg" class="creature" alt="creature" />
 </div>
           </section>
       <!-- END ABOUT US SECTION -->
@@ -96,7 +96,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <img src="/props/creator-me.jpg" alt="About us" class="img-fluid" />
+                    <img src="./props/creator-me.jpg" alt="About us" class="img-fluid" />
                 </div>
             </div>
         </div>
