--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./pages/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./pages/homepage.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/aboutme.html">About Me</a>
@@ -67,7 +67,7 @@
                         
                 </div>
                 <div class="col img-col">
-                    <img src="/props/Icon2.2.png" alt="JOINUSNOW" class="img-fluid" />
+                    <img src="./props/Icon2.2.png" alt="JOINUSNOW" class="img-fluid" />
                 </div>
             </div>
 
@@ -75,7 +75,7 @@
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
-                            <img src="/props/logo.png" alt="Service One" class="icon" />
+                            <img src="./props/logo.png" alt="Service One" class="icon" />
                           <h5 class="card-title">Illustrations and Concepts:</h5>
                           <p class="card-text">I don’t do ordinary. My illustrations and concepts are meant to make people look twice, 
                             question what they see, and maybe feel a little unsettled. If you’re looking for visuals that stand out, 
@@ -88,7 +88,7 @@
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
-                            <img src="/props/IMG_1737.png" alt="Service two" class="icon" />
+                            <img src="./props/IMG_1737.png" alt="Service two" class="icon" />
                           <h5 class="card-title">Personal/Business Branding</h5>
                           <p class="card-text">Branding should reveal what’s beneath the surface. 
                             I build brands that aren’t afraid to show their quirks and raw edges, 
@@ -99,7 +99,7 @@
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
-                            <img src="/props/IMG_1724.png" alt="Service three" class="icon" />
+                            <img src="./props/IMG_1724.png" alt="Service three" class="icon" />
                           <h5 class="card-title">Character Designing</h5>
                           <p class="card-text">I design characters with depth—flaws, backstories, and secrets that make them real. 
                             These aren’t just faces; they’re lives with mysteries and hidden layers. 
