--- a/pages/joinme.html
+++ b/pages/joinme.html
@@ -38,13 +38,13 @@
               <a class="nav-link active" aria-current="page" href="/pages/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/aboutme.html">About Me</a>
+              <a class="nav-link" href="./pages/aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/ProjectsTab.html">Projects</a>
+              <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/pages/joinme.html">join me</a>
+              <a class="nav-link" href="./pages/joinme.html">join me</a>
             </li>
           </ul>
         </div>
