--- a/pages/ProjectsTab.html
+++ b/pages/ProjectsTab.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./pages/index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./pages/homepage.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/aboutme.html">About Me</a>
