--- a/pages/joinme.html
+++ b/pages/joinme.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/joinme.html">join me</a>
+              <a class="nav-link" href="./joinme.html">join me</a>
             </li>
           </ul>
         </div>
