--- a/pages/joinme.html
+++ b/pages/joinme.html
@@ -35,13 +35,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="homepage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/aboutme.html">About Me</a>
+              <a class="nav-link" href="./aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
+              <a class="nav-link" href="./ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./joinme.html">join me</a>
