--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./pages/homepage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/aboutme.html">About Me</a>
+              <a class="nav-link" href="./aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
+              <a class="nav-link" href="./ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/joinme.html">join me</a>
+              <a class="nav-link" href="./joinme.html">join me</a>
             </li>
           </ul>
         </div>
