--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -10,7 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" 
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" 
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/styleaboutme.css">
+    <link rel="stylesheet" href="../styles/styleaboutme.css">
   
 
     <meta charset="utf-8">
@@ -26,7 +26,7 @@
     <nav class="py-3 navbar navbar-expand-lg fixed-top auto-hiding-navbar">
       <div class="container">
         <a class="navbar-brand" href="https://youtu.be/r0xTqwKMOyk?si=w_2iC0RvE0paSvQG">
-          <img src="./props/LogoBar2.png" class="logo" alt="logo" />
+          <img src="../props/LogoBar2.png" class="logo" alt="logo" />
           welcome, My Loners☺
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,16 +35,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./pages/homepage.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="./homepage.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/aboutme.html">About Me</a>
+              <a class="nav-link" href="./aboutme.html">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/ProjectsTab.html">Projects</a>
+              <a class="nav-link" href="./ProjectsTab.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/joinme.html">join me</a>
+              <a class="nav-link" href="./joinme.html">join me</a>
             </li>
           </ul>
         </div>
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col">
-                <img src="./props/Icon2.2.png" alt="About us" class="img-fluid" />
+                <img src="../props/Icon2.2.png" alt="About us" class="img-fluid" />
             </div>
             <div class="col">
                 <h1>About the creature</h1>
@@ -73,7 +73,7 @@
     </div>
 </section>
             <div class="areapic">
-    <img src="./props/creature1.jpg" class="creature" alt="creature" />
+    <img src="../props/creature1.jpg" class="creature" alt="creature" />
 </div>
           </section>
       <!-- END ABOUT US SECTION -->
@@ -96,7 +96,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <img src="./props/creator-me.jpg" alt="About us" class="img-fluid" />
+                    <img src="../props/creator-me.jpg" alt="About us" class="img-fluid" />
                 </div>
             </div>
         </div>
