--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="password" name="password" id="password-input" placeholder="Password">
       </div>
       <button type="submit">Login</button>
-      <h6> email: Go@gmailcom<br>
+      <h6> email: go@gmailcom<br>
           pass: gogo12345
       </h6>
     </form>
